--- a/html/index.html
+++ b/html/index.html
@@ -5,21 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-
+    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
     <title>步道</title>
-    <!-- <link rel="stylesheet" href="//a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
     <script
         src="https://webapi.amap.com/maps?v=1.4.11&key=19b6ffb41d6c37ad488f0d57088e2ebd&plugin=AMap.Riding,AMap.Driving,AMap.Walking">
-    </script>
+        </script>
     <script src="https://webapi.amap.com/loca?v=1.3.2&key=19b6ffb41d6c37ad488f0d57088e2ebd"></script>
-    <!-- <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script> -->
-    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
     <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
-    <link rel="stylesheet" href="../css/index.css" />
     <script src="../js/jquery-3.3.1.min.js"></script>
-     <script src="../js/ajax.js"></script>
-    <!-- <script src="https://a.amap.com/Loca/static/mock/heatmapData.js"></script> -->
-    <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
+    <script src="../js/ajax.js"></script>
+    <script src="../js/iframeMsg.js"></script>
 </head>
 
 <body>
@@ -53,7 +50,7 @@
     </div>
     <script type="text/javascript">
         var heatmap; //热力图
-        var userType = 2; // 推荐路线 or 路线规划
+        var userType = getQueryString('type') || 1; // 推荐路线 or 路线规划
         var routerLines = []; //分组
         var lines = []; //所有的线
         var markerList = []; //所有的岔路口
@@ -66,7 +63,7 @@
         var nextPolyline = []; // 临时线
         var isPointOnLineValue = 1000 //点位精度
         function _resetMap() {
-            markerList && map ?.remove(markerList)
+            markerList && map?.remove(markerList)
             heatmap; //热力图
             userType = 1;
             routerLines = []; //分组
@@ -81,33 +78,43 @@
             nextPolyline = [];
             isPointOnLineValue = 30
 
-            map ?.clearMap()
+            map?.clearMap()
         }
+
     </script>
     <script src="../js/map.js"></script>
     <script src="../js/com.js"></script>
     <script src="../js/setMenu.js"></script>
-   
+
     <script src="../js/heatmap.js"></script>
     <script>
-        init()
-
         let s1 = document.querySelector('.s1');
         let s2 = document.querySelector('.s2');
-        s1.onclick = () => {
-           
+
+        const c1 = () => {
+
             s1.classList.add("active");
             s2.classList.remove("active");
+
             init()
-             userType = 1
+            userType = 1
+
         }
-        s2.onclick = () => {
+        const c2 = () => {
             s2.classList.add("active");
             s1.classList.remove("active");
             init()
             userType = 2
 
         }
+        if (userType == 1) {
+            c1()
+        } else {
+            c2()
+        }
+
+        s1.onclick = c1
+        s2.onclick = c2
     </script>
 
 </body>
