--- a/html/event.html
+++ b/html/event.html
@@ -93,19 +93,17 @@
                     <el-input v-model="form.title" style="width: 300px;"></el-input>
                 </el-form-item>
                 <el-form-item label="选择路线">
-                    <!-- <el-input v-model="form.lineId" style="width: 300px;"></el-input> -->
                     <el-radio-group v-model="form.lineId" @change="_changeRadio">
-                        <el-radio :label="1">路线规划</el-radio>
-                        <el-radio :label="2">推荐路线</el-radio>
+                        <el-radio :label="item.id" v-for="(item,index) in lineList" ::key="index">{{item.title}}</el-radio>
                     </el-radio-group>
-
+<!-- 
                     <el-dialog width="80%" :visible.sync="innerVisible" append-to-body>
                         <iframe :src="`./index.html?form=event&type=${form.lineId}`"></iframe>
                     </el-dialog>
                     <div slot="footer" class="dialog-footer">
                         <el-button @click="outerVisible = false">取 消</el-button>
                         <el-button type="primary" @click="innerVisible = true">打开内层 Dialog</el-button>
-                    </div>
+                    </div> -->
 
 
 
@@ -166,6 +164,7 @@
                     innerVisible: false,
                     dialogVisible: false,
                     tableData: [],
+                    lineList:[],
                     imageUrl: '',
                     id: '',
                     form: {
@@ -184,10 +183,26 @@
                 };
             },
             methods: {
+                 dqh_wcList(startPointId, endPointId) {
+                fetch(`/PCodeClient/api.ashx?cmd=dqh_recommendWalkRoutes`).then((res) => {
+                console.log(res, 'res');
+                // let path = res.msg.ds1[0].lnglatGaode;
+                // console.log(JSON.parse(path), 'JSON.parse(path)');
+                // path = JSON.parse(path);
+                // let _path = path.map(v => [v.lng, v.lat])
+                // draw(_path);
+                // iframe.postMsg({
+                // list: _path
+                // })
+                    this.lineList = res.msg.ds1;
+                })
+                },
+
                 _changeRadio() {
                     this.innerVisible = true;
                 },
                 add() {
+                    this.dqh_wcList();
                     this.dialogVisible = true;
                    this.$nextTick(()=>{
                         console.log(this.$refs.form)
@@ -251,6 +266,7 @@
             },
             created() {
                 this.init()
+                
             },
             mounted() {
                 iframe.listenMsg((v) => {
