--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
     <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/ajax.js"></script>
+    <script src="../js/api.js"></script>
     <script src="../js/iframeMsg.js"></script>
 </head>
 
@@ -85,7 +86,6 @@
     <script src="../js/map.js"></script>
     <script src="../js/com.js"></script>
     <script src="../js/setMenu.js"></script>
-
     <script src="../js/heatmap.js"></script>
     <script>
         let s1 = document.querySelector('.s1');
