--- a/html/setting.html
+++ b/html/setting.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://unpkg.com/element-plus/lib/theme-chalk/index.css">
   <!-- import JavaScript -->
   <script src="https://unpkg.com/element-plus/lib/index.full.js"></script>
+  <script src="../js/iframeMsg.js"></script>
   <title>设置</title>
   <style>
     .el-upload--picture-card {
@@ -20,25 +21,59 @@
       width: 100%;
       height: 100%;
     }
+     </style>
+
+     <style>
+       .avatar-uploader .el-upload {
+         border: 1px dashed #d9d9d9;
+         border-radius: 6px;
+         cursor: pointer;
+         position: relative;
+         overflow: hidden;
+       }
+
+       .avatar-uploader .el-upload:hover {
+         border-color: #409EFF;
+       }
+
+       .avatar-uploader-icon {
+         font-size: 28px;
+         color: #8c939d;
+         width: 88px;
+         height: 88px;
+         line-height: 88px;
+         text-align: center;
+       }
+
+       .avatar {
+         width: 88px;
+         height: 88px;
+         display: block;
+       }
   </style>
 </head>
 
 <body>
   <div id="app">
-    <el-form :label-position="labelPosition" label-width="180px" :model="formLabelAlign">
-      <p>设置节点的安全范围，以便提供自动打卡和电子指向标</p>
-      <el-form-item label="安全电子围栏设置">
-        <el-input v-model="form.name" style="width: 300px;"></el-input>
+    <el-form :label-position="labelPosition" label-width="40px" :model="formLabelAlign">
+      <el-form-item label="标题">
+        <el-input v-model="form.title" ></el-input>
       </el-form-item>
-
-      <p>步道路线电子围栏设置，提供超出安全范围的告警提示</p>
-      <el-form-item label="步道路线电子围栏设置">
-        <el-input v-model="form.name" style="width: 300px;"></el-input>
+      <el-form-item label="描述">
+        <el-input v-model="form.miaoshu" ></el-input>
       </el-form-item>
-
+      <el-form-item label="备注">
+        <el-input v-model="form.remark" ></el-input>
+      </el-form-item>
+       <el-form-item label="封面">
+         <el-upload class="avatar-uploader" action="http://qixing.dqhtravel.com/DInterface/appimgupload.aspx"
+           :show-file-list="false" :on-success="handleAvatarSuccess">
+           <img v-if="imageUrl" :src="imageUrl" class="avatar">
+           <i v-else class="el-icon-plus avatar-uploader-icon"></i>
+         </el-upload>
+       </el-form-item>
       <el-form-item>
-        <el-button plain @click="submit">朴素按钮</el-button>
-
+        <el-button plain @click="submit">生成路线</el-button>
       </el-form-item>
     </el-form>
   </div>
@@ -47,15 +82,23 @@
       data() {
         return {
           form: {
-            name: ''
+            title: '',
+            miaoshu:'',
+            fengmian:'',
+            remark:''
           },
           fileList: [],
           dialogImageUrl: '',
           dialogVisible: false,
-          disabled: false
+          disabled: false,
+          imageUrl:''
         };
       },
       methods: {
+        handleAvatarSuccess(res, file) {
+          this.form.fengmian = res.src;
+          this.imageUrl = URL.createObjectURL(file.raw);
+        },
         handleRemove(file, fileList) {
           console.log(file, fileList);
         },
@@ -80,7 +123,8 @@
           return isLt2M;
         },
         submit() {
-          alert(1);
+           iframe.postMsg(JSON.stringify(this.form))
+          
         }
 
       }
