--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,12 @@
                         index: '1-2',
                         name: '创建赛事',
                         route: './event.html',
+                    }, {
+                    index: '1-3',
+                    name: '赛事权限',
+                    route: './permission.html',
                     }]
+                    // 
                 };
             },
             created() {
