节点和赛事权限

--- a/html/event_setting.html
+++ b/html/event_setting.html
@@ -137,7 +137,7 @@
           'lineId': 'id'
           }}
           fetch(
-            '/PCodeClient/api.ashx?cmd=dqh_creatMatch&token=807BB0364FC5EC081D396599D7D3D4A6',params
+            '/PCodeClient/api.ashx?cmd=dqh_creatMatch',params
             )
         }
 
