--- a/html/permission.html
+++ b/html/permission.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://unpkg.com/element-plus/lib/theme-chalk/index.css">
   <!-- import JavaScript -->
   <script src="https://unpkg.com/element-plus/lib/index.full.js"></script>
-  <script src="../js/iframeMsg.js"></script>
-  <title>赛事权限</title>
+  <script src="../js/jquery-3.3.1.min.js"></script>
+  <script src="../js/ajax.js"></script>
+  <title>赛事报名</title>
   <style>
     .el-upload--picture-card {
       display: flex;
@@ -21,113 +22,95 @@
       width: 100%;
       height: 100%;
     }
-     </style>
+    template {
+    display: block;
+    }
 
-     <style>
-       .avatar-uploader .el-upload {
-         border: 1px dashed #d9d9d9;
-         border-radius: 6px;
-         cursor: pointer;
-         position: relative;
-         overflow: hidden;
-       }
+  </style>
+  <style>
+    .avatar-uploader .el-upload {
+      border: 1px dashed #d9d9d9;
+      border-radius: 6px;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+    }
 
-       .avatar-uploader .el-upload:hover {
-         border-color: #409EFF;
-       }
+    .avatar-uploader .el-upload:hover {
+      border-color: #409EFF;
+    }
 
-       .avatar-uploader-icon {
-         font-size: 28px;
-         color: #8c939d;
-         width: 88px;
-         height: 88px;
-         line-height: 88px;
-         text-align: center;
-       }
+    .avatar-uploader-icon {
+      font-size: 28px;
+      color: #8c939d;
+      width: 178px;
+      height: 178px;
+      line-height: 178px;
+      text-align: center;
+    }
 
-       .avatar {
-         width: 88px;
-         height: 88px;
-         display: block;
-       }
-       #app{
-         width: 400px;
-       }
+    .avatar {
+      width: 178px;
+      height: 178px;
+      display: block;
+    }
   </style>
 </head>
 
 <body>
   <div id="app">
-    <el-form :label-position="labelPosition" label-width="40px" :model="formLabelAlign">
-      <el-form-item label="标题">
-        <el-input v-model="form.title" ></el-input>
-      </el-form-item>
-      <el-form-item label="描述">
-        <el-input v-model="form.miaoshu" ></el-input>
-      </el-form-item>
-      <el-form-item label="备注">
-        <el-input v-model="form.remark" ></el-input>
-      </el-form-item>
-       <!-- <el-form-item label="封面">
-         <el-upload class="avatar-uploader" action="http://qixing.dqhtravel.com/DInterface/appimgupload.aspx"
-           :show-file-list="false" :on-success="handleAvatarSuccess">
-           <img v-if="imageUrl" :src="imageUrl" class="avatar">
-           <i v-else class="el-icon-plus avatar-uploader-icon"></i>
-         </el-upload>
-       </el-form-item> -->
-      <el-form-item>
-        <el-button plain @click="submit">设置</el-button>
-      </el-form-item>
-    </el-form>
+  <el-table :data="tableData" style="width: 800px">
+    <el-table-column prop="user_name" label="用户名" width="250">
+    </el-table-column>
+    <el-table-column prop="Mobile" label="手机号" width="180">
+    </el-table-column>
+      <el-table-column prop="integral" label="赛事用积分" width="180">
+      </el-table-column>
+    <el-table-column label="操作">
+      <template #default="scope">
+        <el-button type="text" @click="handleClick(scope.row)" size="small">
+          <span>{{scope.row.permissions==1?'关闭':'开启'}}</span>
+        </el-button>
+      </template>
+    </el-table-column>
+  </el-table>
   </div>
   <script>
     const App = {
       data() {
         return {
-          form: {
-            title: '',
-            miaoshu:'',
-            fengmian:'',
-            remark:''
-          },
-          fileList: [],
-          dialogImageUrl: '',
-          dialogVisible: false,
-          disabled: false,
-          imageUrl:''
+             tableData: [],
         };
       },
+      created() {
+        // this.id = getQueryString('id')
+        this.dqh_permissionsList();
+      },
       methods: {
-        handleAvatarSuccess(res, file) {
-          this.form.fengmian = res.src;
-          this.imageUrl = URL.createObjectURL(file.raw);
+        dqh_permissionsList() {
+          fetch(`/PCodeClient/api.ashx?cmd=dqh_permissionsList`).then((res) => {
+          this.tableData = res.msg.ds;
+          })
         },
-        handleRemove(file, fileList) {
-          console.log(file, fileList);
-        },
-        handlePreview(file) {
-          console.log(file);
-        },
-        handleExceed(files, fileList) {
-          this.$message.warning(`当前限制选择 3 个文件，本次选择了 ${files.length} 个文件，共选择了 ${files.length + fileList.length} 个文件`);
-        },
-        handlePictureCardPreview(file) {
-          this.dialogImageUrl = file.url;
-          this.dialogVisible = true;
-        },
-        beforeUpload(file, fileList) {
-          console.log(file, fileList)
-          const isJPG = file.type === 'image/jpeg';
-          const isLt2M = file.size / 1024 / 1024 < 2;
-
-          if (!isLt2M) {
-            this.$message.error('上传头像图片大小不能超过 2MB!');
-          }
-          return isLt2M;
+        handleClick(e){
+          console.log(e,'e');
+          fetch(`/PCodeClient/api.ashx?cmd=dqh_matchPermissions`,{mobile:e.Mobile,integral:e.integral,enable:e.permissions==0?1:0,}).then((res)=>
+          {
+          // this.lineList = res.msg.ds1;
+           this.dqh_permissionsList();
+          })
         },
         submit() {
-           iframe.postMsg(JSON.stringify(this.form))
-          
+          let params = {
+            ...this.form,
+            ...{
+              'token': '807BB0364FC5EC081D396599D7D3D4A6',
+              'lineId': 'id'
+            }
+          }
+          fetch(
+            '/PCodeClient/api.ashx?cmd=dqh_permissionsList', params
+          )
         }
 
       }
@@ -136,6 +119,7 @@
     app.use(ElementPlus);
     app.mount("#app");
   </script>
+
 </body>
 
 </html>
