--- a/html/event.html
+++ b/html/event.html
@@ -58,6 +58,9 @@
             height: 178px;
             display: block;
         }
+         #app{
+         padding: 20px;
+         }
     </style>
 </head>
 
