--- a/html/permission.html
+++ b/html/permission.html
@@ -25,7 +25,9 @@
     template {
     display: block;
     }
-
+ #app{
+ padding: 20px;
+ }
   </style>
   <style>
     .avatar-uploader .el-upload {
@@ -59,6 +61,14 @@
 
 <body>
   <div id="app">
+    <el-form :inline="true" class="demo-form-inline">
+      <el-form-item label="手机号">
+        <el-input v-model="mobile" placeholder="请输入手机号"></el-input>
+      </el-form-item>
+      <el-form-item>
+        <el-button type="primary" @click="onSubmit">查询</el-button>
+      </el-form-item>
+    </el-form>
   <el-table :data="tableData" style="width: 800px">
     <el-table-column prop="user_name" label="用户名" width="250">
     </el-table-column>
@@ -74,12 +84,19 @@
       </template>
     </el-table-column>
   </el-table>
+  <!-- <el-pagination @size-change="handleSizeChange" @current-change="handleCurrentChange" :current-page="currentPage4"
+    :page-sizes="[10, 20, 30, 40]" :page-size="pageSize" layout="total, sizes, prev, pager, next, jumper" :total="total">
+  </el-pagination> -->
   </div>
   <script>
     const App = {
       data() {
         return {
              tableData: [],
+             total:0,
+             pageSize:10,
+             currentPage:1,
+             mobile:''
         };
       },
       created() {
@@ -87,8 +104,19 @@
         this.dqh_permissionsList();
       },
       methods: {
-        dqh_permissionsList() {
-          fetch(`/PCodeClient/api.ashx?cmd=dqh_permissionsList`).then((res) => {
+        onSubmit(){
+          this.dqh_permissionsList(this.mobile);
+        },
+         handleSizeChange(val) {
+         console.log(`每页 ${val} 条`);
+         this.pageSize = val;
+         },
+         handleCurrentChange(val) {
+         console.log(`当前页: ${val}`);
+         this.currentPage = val;
+         },
+        dqh_permissionsList(mobile) {
+          fetch(`/PCodeClient/api.ashx?cmd=dqh_permissionsList`,mobile&&mobile.length>0?{mobile:mobile}:{}).then((res) => {
           this.tableData = res.msg.ds;
           })
         },
