--- a/html/map.html
+++ b/html/map.html
@@ -18,6 +18,7 @@
     <script src="../js/ajax.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/iframeMsg.js"></script>
+    <script src="../data/line.js"></script>
 </head>
 
 <body>
