添加步道管理

--- a/html/index.html
+++ b/html/index.html
@@ -50,13 +50,18 @@
                         index: '1-2',
                         name: '创建赛事',
                         route: './event.html',
-                    }, 
+                    },
                     {
                         index: '1-3',
                         name: '赛事权限',
                         route: './permission.html',
-                    }, 
-                ]
+                    },
+                    {
+                        index: '1-4',
+                        name: '步道团队',
+                        route: './trails_manage.html',
+                    },
+                    ]
                     // 
                 };
             },
