--- a/html/event.html
+++ b/html/event.html
@@ -105,10 +105,11 @@
                     <el-dialog width="80%" :visible.sync="innerVisible" append-to-body>
                         <iframe :src="`./map.html?form=event`"></iframe>
                     </el-dialog>
+<!--                     
                     <div slot="footer" class="dialog-footer">
                         <el-button @click="outerVisible = false">取 消</el-button>
                         <el-button type="primary" @click="innerVisible = true">打开内层 Dialog</el-button>
-                    </div>
+                    </div> -->
 
 
 
