添加路线列表

--- a/html/index.html
+++ b/html/index.html
@@ -41,26 +41,32 @@
         const App = {
             data() {
                 return {
-                    activeRoute: './map.html',
-                    list: [{
-                        index: '1-1',
-                        name: '路线选择',
-                        route: './map.html',
-                    }, {
-                        index: '1-2',
-                        name: '创建赛事',
-                        route: './event.html',
-                    },
-                    {
-                        index: '1-3',
-                        name: '赛事权限',
-                        route: './permission.html',
-                    },
-                    {
-                        index: '1-4',
-                        name: '步道团队',
-                        route: './trails_manage.html',
-                    },
+                    activeRoute: './line.html',
+                    list: [
+                        {
+                        index: '1-0',
+                        name: '路线列表',
+                        route: './line.html',
+                        },
+                        {
+                            index: '1-1',
+                            name: '路线选择',
+                            route: './map.html',
+                        }, {
+                            index: '1-2',
+                            name: '创建赛事',
+                            route: './event.html',
+                        },
+                        {
+                            index: '1-3',
+                            name: '赛事权限',
+                            route: './permission.html',
+                        },
+                        {
+                            index: '1-4',
+                            name: '步道团队',
+                            route: './trails_manage.html',
+                        },
                     ]
                     // 
                 };
