--- a/html/event.html
+++ b/html/event.html
@@ -119,7 +119,11 @@
                         value-format="yyyy-MM-dd HH:mm:ss" type="datetime" placeholder="选择日期时间" default-time="12:00:00">
                     </el-date-picker>
                 </el-form-item>
-
+ <el-form-item label="报名结束时间">
+     <el-date-picker v-model="form.signEndTime" format="yyyy-MM-dd HH:mm:ss" value-format="yyyy-MM-dd HH:mm:ss"
+         type="datetime" placeholder="选择日期时间" default-time="12:00:00">
+     </el-date-picker>
+ </el-form-item>
                 <el-form-item label="比赛开始时间">
                     <el-date-picker v-model="form.startTime" type="datetime" format="yyyy-MM-dd HH:mm:ss"
                         value-format="yyyy-MM-dd HH:mm:ss" placeholder="选择日期时间" default-time="12:00:00">
@@ -188,7 +192,7 @@
                         startId:'',
                         endId:'',
                         ids:'',
-                        
+                        signEndTime:''
                     },
                 };
             },
@@ -232,6 +236,7 @@
                             content: '',
                             title: '',
                             img: '',
+                            signEndTime:''
                         }
                     })
                 },
