--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <script src="https://unpkg.com/vue@next"></script>
     <!-- import CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/element-plus/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/element-plus@1.0.2-beta.71/lib/theme-chalk/index.css">
     <!-- import JavaScript -->
-    <script src="https://unpkg.com/element-plus/lib/index.full.js"></script>
+    <script src="https://unpkg.com/element-plus@1.0.2-beta.71/lib/index.full.js"></script>
     <link rel="stylesheet" href="../css/index.css" />
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/ajax.js"></script>
