--- a/html/line.html
+++ b/html/line.html
@@ -80,10 +80,10 @@
     <el-table :data="tableData" style="width:100%">
       <el-table-column prop="id" label="id" width="80">
       </el-table-column >
-        <el-table-column label="封面" width="200">
+        <el-table-column label="封面" width="100">
           <template #default="scope">
-           <img v-if="scope.row.fengmian&&scope.row.fengmian.length>0" :src="oss + scope.row.fengmian" width="100"
-             height="100" alt="">
+           <img v-if="scope.row.fengmian&&scope.row.fengmian.length>0" :src="vImg(scope.row.fengmian)" width="40"
+             height="40" alt="">
           </template>
         </el-table-column>
       <el-table-column prop="title" label="标题" width="250">
@@ -100,9 +100,15 @@
           <el-button type="text" @click.native="handleClick(scope.row)" size="small">
             修改路线
           </el-button>
-          <el-button type="text" @click.native="handleDelete(scope.row)" size="small">
-            删除
-          </el-button>
+          <el-popconfirm title="确定删除这段路径吗？" @confirm="handleDelete(scope.row)">
+            <template #reference>
+            <el-button type="text"  size="small">
+              删除
+            </el-button>
+            </template>
+          </el-popconfirm>
+
+
         </template>
       </el-table-column>
 
@@ -164,12 +170,11 @@
         // this.id = getQueryString('id')
         this.dqh_RecommendWalkRoad();
       },
-      computed:{
-        oss(){
-          return oss;
-        }
-      },
+     
       methods: {
+        vImg(img){
+          return oss + img
+        },
         stateMap(value,type=true){
           let map =type ?{
             '0':'待审核',
