--- a/html/permission.html
+++ b/html/permission.html
@@ -70,17 +70,25 @@
       </el-form-item>
     </el-form>
   <el-table :data="tableData" style="width: 800px">
-    <el-table-column prop="user_name" label="用户名" width="250">
+     <el-table-column label="头像" width="100">
+       <template #default="scope">
+         <img v-if="scope.row.img&&scope.row.img.length>0" :src="scope.row.img" width="40"
+           height="40" alt="">
+       </template>
+     </el-table-column>
+    <el-table-column prop="user_name" label="用户名">
     </el-table-column>
     <el-table-column prop="Mobile" label="手机号" width="180">
     </el-table-column>
-      <el-table-column prop="integral" label="赛事用积分" width="180">
-      </el-table-column>
+      <el-table-column prop="match_integral" label="赛事积分" width="180"></el-table-column>
     <el-table-column label="操作">
       <template #default="scope">
         <el-button type="text" @click="handleClick(scope.row)" size="small">
           <span>{{scope.row.permissions==1?'关闭':'开启'}}</span>
         </el-button>
+         <el-button type="text" @click="handleOpen(scope.row)" size="small">
+          设置积分
+         </el-button>
       </template>
     </el-table-column>
   </el-table>
@@ -104,6 +112,20 @@
         this.dqh_permissionsList();
       },
       methods: {
+        handleOpen(e){
+          this.$prompt('请输入积分', '提示', {
+          confirmButtonText: '确定',
+          cancelButtonText: '取消',
+           }).then(({ value }) => {
+             console.log(value)
+             e.integral = value;
+             this.handleClick(e,2)
+          // this.$message({
+          // type: 'success',
+          // message: '你的邮箱是: ' + value
+          // });
+          })
+        },
         onSubmit(){
           this.dqh_permissionsList(this.mobile);
         },
@@ -120,11 +142,13 @@
           this.tableData = res.msg.ds;
           })
         },
-        handleClick(e){
-          console.log(e,'e');
-          fetch(`/PCodeClient/api.ashx?cmd=dqh_matchPermissions`,{id:e.id,integral:e.integral,enable:e.permissions==0?1:0,}).then((res)=>
+        handleClick(e,type){
+          fetch(`/PCodeClient/api.ashx?cmd=dqh_matchPermissions`,{id:e.id,integral:e.integral,enable:type?e.permissions:(e.permissions==0?1:0),}).then((res)=>
           {
-           this.dqh_permissionsList(this.mobile);
+            let msg = res.msg.ds[0].msg;
+            let str = e.permissions==1?'关闭':'开通';
+            this.$message.success(`${type?'设置':str}${msg}`);
+            this.dqh_permissionsList(this.mobile);
           })
         },
         submit() {
